# news-prism

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: context.md
infra/: .gitignore  .terraform.lock.hcl  README.md  acm.tf  api_gateway.tf  budgets.tf  build.sh  dynamodb.tf  guardrail.tf  lambda.tf  locals.tf  main.tf  outputs.tf  requirements-lambda.txt  secrets.tf  terraform.tfvars.example  variables.tf  web.tf
scripts/: measure_burst.py
src/news_prism/: __init__.py  article_fetch.py  bedrock_client.py  context_fetch.py  dynamodb_writer.py  http_safety.py  lambda_handler.py  poc.py  prompts.py  tool_schema.py
src/web/: index.html  manifest.webmanifest
tests/: test_http_safety.py
