[project]
name = "news-prism"
version = "0.1.0"
description = "Multi-perspective news analyzer using Amazon Bedrock + Prompt Caching"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Takayuki Tadokoro" }]
requires-python = ">=3.12"
keywords = ["bedrock", "prompt-caching", "aws-lambda", "news-analyzer", "personal-tool"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Operating System :: OS Independent",
]
dependencies = ["boto3>=1.35", "trafilatura>=1.12", "python-dotenv>=1.0"]

[project.urls]
Homepage = "https://github.com/tadokoro88/news-prism"
Repository = "https://github.com/tadokoro88/news-prism"
Issues = "https://github.com/tadokoro88/news-prism/issues"

[project.optional-dependencies]
dev = ["ruff>=0.6", "pyright>=1.1", "pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/news_prism"]